syntax = "proto3"; //specify proto3 version

package work_leave; //UNIQUE PACKAGE NAME (optional)

//Defining service. define the methods that the grpc server can expose to the client.
service EmployeeLeaveDayService{
  rpc EligibleForLeave(Employee) returns (LeaveEligibility);
  rpc grantLeave(Employee) returns (LeaveFeedback);
}


//Message type definition for an Employee
message Employee{
  int32 employee_id=1;
  string name=2;
  float accrued_leave_days=3;
  float requested_leave_days=4;
}

//Message type definition for LeaveEligibility response
message LeaveEligibility{
  bool eligible=1;
}

//Message type definition for LeaveFeedback response
message LeaveFeedback{
  bool granted = 1;
  float accrued_leave_days=2;
  float granted_leave_days=3;
}
